--- a/to-do/src/components/form/style.css
+++ b/to-do/src/components/form/style.css
@@ -1,31 +1,32 @@
 .form {
-  display: flex;
-  align-items: center;
-  padding: 30px;
-  justify-items: center;
-  justify-content: space-between;
-  margin: 0 auto;
-  gap: 20px;
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    justify-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+    gap: 20px;
+    background-color: whitesmoke;
 }
 .input-group {
-  display: flex;
-  gap: 20px;
-  align-items: center;
+    display: flex;
+    gap: 20px;
+    align-items: center;
 }
 .input-text {
-  width: 240px;
-  height: 40px;
-  padding: 0 12px;
-  border-radius: 10px;
-  border: 0;
-  gap: 20px;
+    width: 240px;
+    height: 40px;
+    padding: 0 12px;
+    border-radius: 10px;
+    border: 0;
+    gap: 20px;
 }
 .label-name {
-  font-size: 16px;
+    font-size: 16px;
 }
 .input-btn {
-  width: 150px;
-  height: 40px;
-  border-radius: 10px;
-  border: none;
+    width: 150px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
 }
