--- a/to-do/src/components/layout/style.css
+++ b/to-do/src/components/layout/style.css
@@ -1,6 +1,6 @@
 .layout {
-  max-width: 1200px;
-  min-width: 800px;
-  background-color: bisque;
-  margin: 0 auto;
+    max-width: 1200px;
+    min-width: 800px;
+    /* background-color: bisque; */
+    margin: 0 auto;
 }
