--- a/to-do/src/components/todo/style.css
+++ b/to-do/src/components/todo/style.css
@@ -1,14 +1,27 @@
 .list-container {
-  width: 270px;
-  padding: 12px 24px 24px;
-  border-radius: 12px;
-  border: 1px solid salmon;
+    width: 270px;
+    padding: 12px 24px 24px;
+    border-radius: 12px;
+    border: 2px solid salmon;
 }
 .button-container {
-  display: flex;
-  gap: 10px;
-  margin-top: 24px;
+    display: flex;
+    gap: 10px;
+    margin-top: 24px;
 }
 .todo-delete-btn {
-  border: 2px solid green;
+    border: 3px solid red;
+    width: 50%;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 8px;
+    background-color: #fff;
+}
+.todo-complete-btn {
+    border: 3px solid green;
+    width: 40%;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 8px;
+    background-color: #fff;
 }
